turso/libsql version of tanstarter

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "auth:generate": "pnpm dlx @better-auth/cli@latest generate --y --output ./src/lib/server/schema/auth.schema.ts && prettier --write ./src/lib/server/schema/auth.schema.ts"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.0",
     "@radix-ui/react-slot": "^1.1.2",
     "@tanstack/react-query": "^5.69.0",
     "@tanstack/react-query-devtools": "^5.69.0",
